kube-addons/jenkins/4-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: lunatech
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: jenkins
  type: ClusterIP
