kube-addons/jenkins/5-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: lunatech
spec:
  rules:
  - host: lunatech.jenkins.hariprasad-karthigasu.info
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins
          servicePort: 8080
